--- a/src/View/Login.form
+++ b/src/View/Login.form
@@ -45,7 +45,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="133" max="32767" attributes="0"/>
+                      <EmptySpace pref="117" max="32767" attributes="0"/>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -124,7 +124,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Create User"/>
+        <Property name="text" type="java.lang.String" value="Create Student"/>
       </Properties>
     </Component>
   </SubComponents>
